# phase3-tudo-aichatbot

./: .env.example  .gitignore  .vercelignore  COMMIT_MESSAGE.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  SEPARATION_SUMMARY.md  cookies.txt  requirements.txt  vercel.json
.specify/memory/: constitution.md
api/: .env.example  .vercelignore  DEPLOYMENT.md  index.py  requirements.txt  vercel.json
api/src/: database.py  main.py  requirements.txt
api/src/api/: __init__.py  auth.py  tasks.py
api/src/middleware/: cors.py
api/src/models/: user.py
backend/: .env.example  .gitignore  Procfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py  002_initial_tasks.py  003_add_conversations.py  004_add_messages.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  chat.py  deps.py  errors.py
backend/src/middleware/: cors.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py
backend/src/schemas/: __init__.py  chat.py  conversation.py  message.py  task.py
backend/src/services/: __init__.py  chat_service.py  mcp_tools.py
frontend/: .env.example  .env.production  .vercelignore  DEPLOYMENT.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
specs/001-intelligent-todo-assistant/: research.md  spec.md  tasks.md
specs/002-todo-web-app/: data-model.md  implement.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-todo-assistant/: data-model.md  implement.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+45 files in other folders)
